@@ -5,6 +5,8 @@ require "malge/errorfittedfunction/aexpbx.rb"
 require "malge/errorfittedfunction/aexpbx32.rb"
 require "malge/errorfittedfunction/axinv.rb"
 require "malge/errorfittedfunction/axinv32.rb"
+require "malge/errorfittedfunction/axinv2.rb"
+require "malge/errorfittedfunction/axinv3.rb"
 require "malge/errorfittedfunction/axinvplusb.rb"
 require "malge/errorfittedfunction/axinv32plusb.rb"
 require "malge/leastsquare.rb"
